--- a/http/publish-news.html
+++ b/http/publish-news.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Отправить новость</title>
+	<title>Publish news</title>
 
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -18,13 +18,13 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-				<a class="navbar-brand" href="#">Микросервисы</a>
+				<a class="navbar-brand" href="#">Microservices</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="read-news.html">Читать новости</a></li>
-					<li class="active"><a href="publish-news.html">Опубликовать новость</a></li>
+					<li><a href="read-news.html">Latest news</a></li>
+					<li class="active"><a href="publish-news.html">Publish news</a></li>
 				</ul>
 			</div>
 		</div>
@@ -33,7 +33,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				<h1 class="text-center">Опубликовать новость</h1>
+				<h1 class="text-center">Publish news</h1>
 			</div>
 		</div>
 	</div>
@@ -56,23 +56,23 @@
 	<div class="container">
 		<form name="form-news" method="POST" enctype="multipart/form-data">
 			<div class="form-group">
-				<label class="control-label" for="topic">Рубрика</label>
+				<label class="control-label" for="topic">Category</label>
 				<select class="form-control" id="topic" name="topic" required>
-					<option value="Автомобили">Автомобили</option>
-					<option value="Электроника">Электроника</option>
-					<option value="Медицина">Медицина</option>
+					<option value="Cars">Cars</option>
+					<option value="Electronics">Electronics</option>
+					<option value="Medicine">Medicine</option>
 				</select>
 			</div>
 			<div class="form-group">
-				<label class="control-label" for="news">Новость</label>
-				<textarea class="form-control" id="news" name="news" placeholder="Напишите новость" rows="3" required></textarea>
+				<label class="control-label" for="news">News</label>
+				<textarea class="form-control" id="news" name="news" placeholder="News" rows="3" required></textarea>
 			</div>
 			<div class="form-group">
-				<label class="control-label" for="image">Изображение</label>
+				<label class="control-label" for="image">Image</label>
 				<input type="file" class="form-control" id="image" name="image">
 			</div>
 			<div class="form-group">
-				<button id="publishButton" type="button" class="btn btn-primary">Опубликовать</button>
+				<button id="publishButton" type="button" class="btn btn-primary">Publish</button>
 			</div>
 			<input type="hidden" name="unique_id">
 		</form>
