--- a/http/read-news.html
+++ b/http/read-news.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Последние новости</title>
+	<title>Latest news</title>
 
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -38,13 +38,13 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Микросервисы</a>
+				<a class="navbar-brand" href="#">Microservices</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="read-news.html">Читать новости</a></li>
-					<li><a href="publish-news.html">Опубликовать новость</a></li>
+					<li class="active"><a href="read-news.html">Latest news</a></li>
+					<li><a href="publish-news.html">Publish news</a></li>
 				</ul>
 			</div>
 		</div>
@@ -53,7 +53,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				<h1 class="text-center">Последние новости</h1>
+				<h1 class="text-center">Latest news</h1>
 			</div>
 		</div>
 	</div>
@@ -61,10 +61,10 @@
 	<div class="container filter">
 		<div class="row">
 			<div class="col-xs-12">
-				<select class="selectpicker" id="topic" multiple title="Рубрики подписки">
-					<option value="Автомобили">Автомобили</option>
-					<option value="Электроника">Электроника</option>
-					<option value="Медицина">Медицина</option>
+				<select class="selectpicker" id="topic" multiple title="Category">
+					<option value="Cars">Cars</option>
+					<option value="Electronics">Electronics</option>
+					<option value="Medicine">Medicine</option>
 				</select>
 			</div>
 		</div>
@@ -74,7 +74,7 @@
 		<div class="thumbnail">
 			<div class="row">
 				<div class="col-xs-8">
-					<span class="label label-primary">Медицина</span>
+					<span class="label label-primary">Medicine</span>
 				</div>
 				<div class="col-xs-4 text-right time">16:05:45 26.01.2016</div>
 			</div>
@@ -85,7 +85,7 @@
 		<div class="thumbnail">
 			<div class="row">
 				<div class="col-xs-8">
-					<span class="label label-primary">Электроника</span>
+					<span class="label label-primary">Electronics</span>
 				</div>
 				<div class="col-xs-4 text-right time">16:05:30 26.01.2016</strong></small></div>
 			</div>
@@ -96,7 +96,7 @@
 		<div class="thumbnail">
 			<div class="row">
 				<div class="col-xs-8">
-					<span class="label label-primary">Автомобили</span>
+					<span class="label label-primary">Cars</span>
 				</div>
 				<div class="col-xs-4 text-right time">13:15:24 26.01.2016</div>
 			</div>
@@ -126,20 +126,34 @@
 		conTopology = new WebSocket('ws://'+address);
 		conTopology.onopen = function(e) {
 			console.log("Установленно соединение с topology " + address);
-			conTopology.send('getlistnode|'+JSON.stringify('RATCHET PUBLISH WS'));
+			var message = {
+				'action': 'get_next_node',
+				'cluster': 'PUBLISH WS'
+			};
+			conTopology.send( JSON.stringify(message) );
 		};
 
 		conTopology.onmessage = function(e) {
-			var msg = e.data;
-			msg = msg.split('|');
-			msg[1] = JSON.parse(msg[1]);
-			if('getlistnode' == msg[0] && 0 < msg[1].length) {
-				var address = msg[1][Math.floor(Math.random()*msg[1].length)];
-				setConnection(address, 5000);
-				conTopology.close();
-			} else if('getlistnode' == msg[0]) {
-				console.log('Нет работающих серверов');
+			var msg = JSON.parse(e.data);
+
+			if('PUBLISH WS' == msg.cluster) {
+				if(msg.next_node) {
+					setConnection(msg.next_node.address);
+				} else {
+					console.log('Нет работающих серверов ws');
+				}
 			}
+
+			// var msg = e.data;
+			// msg = msg.split('|');
+			// msg[1] = JSON.parse(msg[1]);
+			// if('getlistnode' == msg[0] && 0 < msg[1].length) {
+			// 	var address = msg[1][Math.floor(Math.random()*msg[1].length)];
+			// 	setConnection(address, 5000);
+			// 	conTopology.close();
+			// } else if('getlistnode' == msg[0]) {
+			// 	console.log('Нет работающих серверов');
+			// }
 		};
 
 		conTopology.onclose = function(e) {
@@ -149,30 +163,37 @@
 		};
 	}
 
-	function setConnection(address, timeout) {
+	function setConnection(address) {
 		conn = new ab.Session('ws://'+address,
 			function() {
 				console.log("Установленно соединение с " + address);
 
-				conn.subscribe('Автомобили', function(topic, data) {
-					showNews(Array(topic), data.news, data.time);
+				conn.subscribe('Cars', function(topic, data) {
+					showNews(Array(topic), data.news, data.path, data.time);
 				});
 
-				conn.subscribe('Медицина', function(topic, data) {
-					showNews(Array(topic), data.news, data.time);
+				conn.subscribe('Electronics', function(topic, data) {
+					showNews(Array(topic), data.news, data.path, data.time);
+				});
+
+				conn.subscribe('Medicine', function(topic, data) {
+					showNews(Array(topic), data.news, data.path, data.time);
 				});
 			},
 			function() {
-				console.log('Соединение не установлено. Переподключение через '+timeout/1000+' сек.');
-				setTimeout(setConnection, timeout, address, timeout*2);
+				console.log('Соединение с публикатором новостей не установлено');
 			},
 			{'skipSubprotocolCheck': true}
 		);
 	}
 
-	function showNews(topics, news, time) {
+	function showNews(topics, news, path, time) {
+		var image = '';
+		if(path) {
+			image = '<div><img class="img-responsive" width="80%" style="margin: 0 auto;" src="http://'+path+'"></div>'
+		}
 
-		newsColumn.innerHTML += '<div class="thumbnail"><div class="row"><div class="col-xs-8"><span class="label label-primary">'+topics[0]+'</span></div><div class="col-xs-4 text-right time">'+time+'</div></div><div class="row news-text"><div class="col-xs-12 text-justify">'+news+'</div></div></div>';
+		newsColumn.innerHTML += '<div class="thumbnail"><div class="row"><div class="col-xs-8"><span class="label label-primary">'+topics[0]+'</span></div><div class="col-xs-4 text-right time">'+time+'</div></div><div class="row news-text"><div class="col-xs-12 text-justify">'+news+'</div>'+image+'</div></div>';
 	}
 	</script>
 </body>
